適應新背景動畫

--- a/index.html
+++ b/index.html
@@ -23,14 +23,19 @@
     <div class="loading-container">
       <div class="Loading">Loading</div>
     </div>
-    <div class="moving-images left">
-      <!-- 左側隨機選擇的圖片將在JavaScript中插入 -->
-    </div>
-    <div class="moving-images middle">
-      <!-- 中間隨機選擇的圖片將在JavaScript中插入 -->
-    </div>
-    <div class="moving-images right">
-      <!-- 右側隨機選擇的圖片將在JavaScript中插入 -->
+    <div class="moving-images-container">
+      <div class="moving-images a">
+        <!-- 左側隨機選擇的圖片將在JavaScript中插入 -->
+      </div>
+      <div class="moving-images b">
+        <!-- 中間隨機選擇的圖片將在JavaScript中插入 -->
+      </div>
+      <div class="moving-images c">
+        <!-- 右側隨機選擇的圖片將在JavaScript中插入 -->
+      </div>
+      <div class="moving-images d">
+        <!-- 右側隨機選擇的圖片將在JavaScript中插入 -->
+      </div>
     </div>
     <!-- 主頁內容 -->
     <div class="content">
