更改主頁UI結構

--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
         </div>
       </div>
       <div class="tool-bar">
-        <div class="search-btn">
-          <img src="./images/icon/search.png" alt="" />
-        </div>
         <div class="setting-btn">
           <img src="./images/icon/setting.png" alt="" />
+        </div>
+        <div class="search-bar">
+          <img src="./images/icon/search.png" alt="" />
+          <input type="text" class="search-input" name="search-input" />
         </div>
         <div class="stop-btn">
           <img src="./images/icon/toggle.png" alt="" />
