統一大小寫、UI小更新

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="loading-container">
-      <div class="Loading">Loading</div>
+      <img class="loading" src="./images/icon/loading.gif" />
     </div>
     <div class="moving-images-container">
       <div class="moving-images a">
@@ -46,15 +46,15 @@
       <div class="buttons-container">
         <div class="btn-wrapper">
           <div class="btn" data-image="Nature">Nature</div>
-          <div class="btn-shadow"></div>
+          <div class="btn-shadow blue"></div>
         </div>
         <div class="btn-wrapper">
           <div class="btn" data-image="Props">Props</div>
-          <div class="btn-shadow"></div>
+          <div class="btn-shadow yellow"></div>
         </div>
         <div class="btn-wrapper">
           <div class="btn" data-image="Scene">Scene</div>
-          <div class="btn-shadow"></div>
+          <div class="btn-shadow red"></div>
         </div>
       </div>
       <div class="tool-bar">
