close-btn做成img UI小改

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
     </div>
     <!-- 預覽與全螢幕 -->
     <div class="fullscreen-overlay">
-      <div class="close-btn">×</div>
+      <div class="close-btn">
+        <img src="./images/icon/close.png" />
+      </div>
       <div class="prevImage-btn">
         <img src="./images/icon/prev.png" />
       </div>
