增加回到頂端按鈕UI

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
     <div class="back-to-home">
       <img src="./images/icon/home.png" alt="" />
     </div>
+    <div class="top-btn">
+      <img src="./images/icon/top (blue).png" />
+    </div>
     <!-- 預覽與全螢幕 -->
     <div class="fullscreen-overlay">
       <div class="close-btn">
