重新設計返回主頁按鈕

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="bottom"></div>
     </div>
     <div class="back-to-home">
-      <img src="./images/icon/home.png" alt="" />
+      <img src="./images/icon/home (blue).png" />
     </div>
     <div class="top-btn">
       <img src="./images/icon/top (blue).png" />
