--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <img src="./images/icon/next.png" />
       </div>
       <div class="fullscreen-image-container">
-        <img src="" alt="" />
+        <!-- JavaScript 會自動生成圖片 -->
       </div>
     </div>
   </body>
