--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
       <div class="fullscreen-image-container">
         <!-- JavaScript 會自動生成圖片 -->
       </div>
+      <div class="text-container">
+        <p>demo/demo/demo</p>
+        <div>.jpg</div>
+      </div>
     </div>
   </body>
 </html>
