--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
       </div>
       <div class="tool-bar">
         <div class="setting-btn">
-          <img src="./images/icon/setting.png" alt="" />
+          <img src="./images/icon/setting.gif" alt="" />
         </div>
         <div class="search-bar">
           <img src="./images/icon/search.png" alt="" />
           <input type="text" class="search-input" name="search-input" />
         </div>
         <div class="stop-btn">
-          <img src="./images/icon/toggle.png" alt="" />
+          <img src="./images/icon/off.png" alt="" />
         </div>
       </div>
     </div>
