改class名字使其更容易閱讀

--- a/index.html
+++ b/index.html
@@ -43,30 +43,30 @@
         <img class="ico" src="./images/icon/computer_folder.png" />
         <h1>1ureka's CG</h1>
       </div>
-      <div class="buttons-container">
-        <div class="btn-wrapper">
-          <div class="btn" data-image="Nature">Nature</div>
+      <div class="page-btn-container">
+        <div class="page-btn">
+          <div class="page-btn-title" data-image="Nature">Nature</div>
           <div class="btn-shadow blue"></div>
         </div>
-        <div class="btn-wrapper">
-          <div class="btn" data-image="Props">Props</div>
+        <div class="page-btn">
+          <div class="page-btn-title" data-image="Props">Props</div>
           <div class="btn-shadow yellow"></div>
         </div>
-        <div class="btn-wrapper">
-          <div class="btn" data-image="Scene">Scene</div>
+        <div class="page-btn">
+          <div class="page-btn-title" data-image="Scene">Scene</div>
           <div class="btn-shadow red"></div>
         </div>
       </div>
-      <div class="tool-bar">
-        <div class="setting-btn">
-          <img src="./images/icon/setting.gif" alt="" />
+      <div class="tool-bar-container">
+        <div class="setting-bar">
+          <img class="setting-btn" src="./images/icon/setting.gif" />
         </div>
         <div class="search-bar">
-          <img src="./images/icon/search.png" alt="" />
+          <img class="search-btn" src="./images/icon/search.png" />
           <input type="text" class="search-input" name="search-input" />
         </div>
-        <div class="stop-btn">
-          <img src="./images/icon/off.png" alt="" />
+        <div class="close-bar">
+          <img class="stop-btn" src="./images/icon/off.png" />
         </div>
       </div>
     </div>
