--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
         </div>
         <div class="close-bar">
           <img class="stop-btn" src="./images/icon/off.png" />
+          <img class="restart-btn" src="./images/icon/restart.png" />
+          <div class="stop-lable">close</div>
+          <div class="restart-lable">restart</div>
         </div>
       </div>
     </div>
