美化UI，重新布局，簡化動畫

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           <img class="restart-btn" src="./images/icon/restart.png" />
           <div class="stop-lable">close</div>
           <div class="restart-lable">restart</div>
+          <div class="line"></div>
         </div>
       </div>
     </div>
