--- a/index.html
+++ b/index.html
@@ -60,6 +60,37 @@
       <div class="tool-bar-container">
         <div class="setting-bar">
           <img class="setting-btn" src="./images/icon/setting.gif" />
+          <div class="setting-menu">
+            <div class="options-title">
+              <div><img class="animation-icon" src="" alt="" /></div>
+              <div><img class="language-icon" src="" alt="" /></div>
+              <div><img class="color-icon" src="" alt="" /></div>
+            </div>
+            <div class="line-container"><div class="line"></div></div>
+            <div class="options-input">
+              <div class="options-animation">
+                <img class="pause-btn" src="" alt="" />
+                <img class="reserve-btn" src="" alt="" />
+              </div>
+              <div class="options-language">
+                <div class="english">English</div>
+                <div class="japanese">日文</div>
+                <div class="chinese">繁體中文</div>
+              </div>
+              <div class="options-color">
+                <img class="background-icon" src="" alt="" />
+                <div class="color-picker-background">
+                  <input type="color" class="color-picker-bottom" />
+                  <div class="color-picker-top"></div>
+                </div>
+                <img class="interface-icon" src="" alt="" />
+                <div class="color-picker-interface">
+                  <input type="color" class="color-picker-bottom" />
+                  <div class="color-picker-top"></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="search-bar">
           <img class="search-btn" src="./images/icon/search.png" />
@@ -102,7 +133,7 @@
         <!-- JavaScript 會自動生成圖片 -->
       </div>
       <div class="text-container">
-        <p>demo/demo/demo</p>
+        <p>image name</p>
         <div>.jpg</div>
       </div>
     </div>
