--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <div><img class="language-icon" src="" alt="" /></div>
               <div><img class="color-icon" src="" alt="" /></div>
             </div>
-            <div class="line-container"><div class="line"></div></div>
+            <div class="line"></div>
             <div class="options-input">
               <div class="options-animation">
                 <img class="pause-btn" src="" alt="" />
