--- a/index.html
+++ b/index.html
@@ -60,34 +60,47 @@
       <div class="tool-bar-container">
         <div class="setting-bar">
           <img class="setting-btn" src="./images/icon/setting.gif" />
-          <div class="setting-menu">
-            <div class="options-title">
-              <div><img class="animation-icon" src="" alt="" /></div>
-              <div><img class="language-icon" src="" alt="" /></div>
-              <div><img class="color-icon" src="" alt="" /></div>
+          <div class="options-icon">
+            <img class="animation-btn" src="" alt="" />
+            <img class="language-btn" src="" alt="" />
+            <img class="color-btn" src="" alt="" />
+            <img class="bottom-btn" src="" alt="" />
+          </div>
+          <div class="line"></div>
+          <div class="options-lable">
+            <div>Animation</div>
+            <div>Language</div>
+            <div>Color</div>
+            <div>Back</div>
+          </div>
+          <div class="options-animation">
+            <div class="option">
+              <div>pause</div>
+              <img class="pause-btn" src="" alt="" />
             </div>
-            <div class="line"></div>
-            <div class="options-input">
-              <div class="options-animation">
-                <img class="pause-btn" src="" alt="" />
-                <img class="reserve-btn" src="" alt="" />
+            <div class="option">
+              <div>reverse</div>
+              <img class="reverse-btn" src="" alt="" />
+            </div>
+          </div>
+          <div class="options-language">
+            <div class="english">English</div>
+            <div class="japanese">日文</div>
+            <div class="chinese">繁體中文</div>
+          </div>
+          <div class="options-color">
+            <div class="option">
+              <img class="background-icon" src="" alt="" />
+              <div class="color-picker-background">
+                <input type="color" class="color-picker-bottom" />
+                <div class="color-picker-top"></div>
               </div>
-              <div class="options-language">
-                <div class="english">English</div>
-                <div class="japanese">日文</div>
-                <div class="chinese">繁體中文</div>
-              </div>
-              <div class="options-color">
-                <img class="background-icon" src="" alt="" />
-                <div class="color-picker-background">
-                  <input type="color" class="color-picker-bottom" />
-                  <div class="color-picker-top"></div>
-                </div>
-                <img class="interface-icon" src="" alt="" />
-                <div class="color-picker-interface">
-                  <input type="color" class="color-picker-bottom" />
-                  <div class="color-picker-top"></div>
-                </div>
+            </div>
+            <div class="option">
+              <img class="interface-icon" src="" alt="" />
+              <div class="color-picker-interface">
+                <input type="color" class="color-picker-bottom" />
+                <div class="color-picker-top"></div>
               </div>
             </div>
           </div>
