--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
           <img class="setting-btn" src="./images/icon/setting.gif" />
           <div class="options-icon">
             <img class="animation-btn" src="" alt="" />
-            <img class="language-btn" src="" alt="" />
-            <img class="color-btn" src="" alt="" />
-            <img class="bottom-btn" src="" alt="" />
+            <img class="language-btn" src="./images/icon/language.png" />
+            <img class="color-btn" src="./images/icon/palette.png" />
+            <img class="bottom-btn" src="./images/icon/top (red).png" />
           </div>
           <div class="line"></div>
           <div class="options-lable">
