更新關閉選單動畫-UI

--- a/index.html
+++ b/index.html
@@ -112,8 +112,14 @@
         <div class="close-bar">
           <img class="stop-btn" src="./images/icon/off.png" />
           <img class="restart-btn" src="./images/icon/restart.png" />
-          <div class="stop-lable">close</div>
-          <div class="restart-lable">restart</div>
+          <div class="stop-lable-container">
+            <div class="stop-lable-red">close</div>
+            <div class="stop-lable-white">close</div>
+          </div>
+          <div class="restart-lable-container">
+            <div class="restart-lable-red">restart</div>
+            <div class="restart-lable-white">restart</div>
+          </div>
           <div class="line"></div>
         </div>
       </div>
