完成option-icon之icon與hover動畫

--- a/index.html
+++ b/index.html
@@ -61,17 +61,29 @@
         <div class="setting-bar">
           <img class="setting-btn" src="./images/icon/setting.gif" />
           <div class="options-icon">
-            <img class="animation-btn" src="" alt="" />
+            <img class="animation-btn" src="./images/icon/film.png" />
             <img class="language-btn" src="./images/icon/language.png" />
             <img class="color-btn" src="./images/icon/palette.png" />
             <img class="bottom-btn" src="./images/icon/top (red).png" />
           </div>
           <div class="line"></div>
           <div class="options-lable">
-            <div>Animation</div>
-            <div>Language</div>
-            <div>Color</div>
-            <div>Back</div>
+            <div class="animation-lable-container">
+              <div class="animation-lable-red">animation</div>
+              <div class="animation-lable-white">animation</div>
+            </div>
+            <div class="language-lable-container">
+              <div class="language-lable-red">language</div>
+              <div class="language-lable-white">language</div>
+            </div>
+            <div class="color-lable-container">
+              <div class="color-lable-red">color</div>
+              <div class="color-lable-white">color</div>
+            </div>
+            <div class="bottom-lable-container">
+              <div class="bottom-lable-red">back</div>
+              <div class="bottom-lable-white">back</div>
+            </div>
           </div>
           <div class="options-animation">
             <div class="option">
