animation option 新增icon

--- a/index.html
+++ b/index.html
@@ -87,12 +87,18 @@
           </div>
           <div class="options-animation">
             <div class="option">
-              <div>pause</div>
-              <img class="pause-btn" src="" alt="" />
+              <div class="pause-play-lable-container">
+                <div class="pause-lable">pause</div>
+                <div class="play-lable">play</div>
+              </div>
+              <div class="pause-play-btn-container">
+                <img class="pause-btn" src="./images/icon/pause.png" />
+                <img class="play-btn" src="./images/icon/play.png" />
+              </div>
             </div>
             <div class="option">
-              <div>reverse</div>
-              <img class="reverse-btn" src="" alt="" />
+              <div class="reverse-lable">reverse</div>
+              <img class="reverse-btn" src="./images/icon/reverse.png" />
             </div>
           </div>
           <div class="options-language">
