初步加上顏色控制邏輯，改正文本

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
           <div class="options-language">
             <div class="english">English</div>
-            <div class="japanese">日文</div>
+            <div class="japanese">日本語</div>
             <div class="chinese">繁體中文</div>
           </div>
           <div class="options-color">
