增加動畫選項懸停動畫

--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@
           </div>
           <div class="options-animation">
             <div class="option">
-              <div class="pause-play-lable-container">
-                <div class="pause-lable">pause</div>
-                <div class="play-lable">play</div>
+              <div class="pause-lable-container">
+                <div class="pause-lable-red">pause</div>
+                <div class="pause-lable-white">pause</div>
               </div>
-              <div class="pause-play-btn-container">
-                <img class="pause-btn" src="./images/icon/pause.png" />
-                <img class="play-btn" src="./images/icon/play.png" />
-              </div>
+              <img class="pause-btn" src="./images/icon/pause.png" />
             </div>
             <div class="option">
-              <div class="reverse-lable">reverse</div>
+              <div class="reverse-lable-container">
+                <div class="reverse-lable-red">reverse</div>
+                <div class="reverse-lable-white">reverse</div>
+              </div>
               <img class="reverse-btn" src="./images/icon/reverse.png" />
             </div>
           </div>
