增加類以清晰選擇元素

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         <h1>1ureka's CG</h1>
       </div>
       <div class="page-btn-container">
-        <div class="page-btn">
+        <div class="page-btn Nature">
           <div class="page-btn-title" data-image="Nature">Nature</div>
           <div class="btn-shadow blue"></div>
         </div>
-        <div class="page-btn">
+        <div class="page-btn Props">
           <div class="page-btn-title" data-image="Props">Props</div>
           <div class="btn-shadow yellow"></div>
         </div>
-        <div class="page-btn">
+        <div class="page-btn Scene">
           <div class="page-btn-title" data-image="Scene">Scene</div>
           <div class="btn-shadow red"></div>
         </div>
