--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <img src="./images/icon/next.png" />
       </div>
       <div class="fullscreen-image-container">
-        <!-- JavaScript 會自動生成圖片 -->
+        <img src="" />
       </div>
       <div class="text-container">
         <p>image name</p>
