settingBar第一版完成

--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
           </div>
           <div class="options-color">
             <div class="option">
-              <img class="background-icon" src="" alt="" />
+              <img class="background-icon" src="./images/icon/background.png" />
               <div class="color-picker-background">
                 <input type="color" class="color-picker-bottom" />
                 <div class="color-picker-top"></div>
               </div>
             </div>
             <div class="option">
-              <img class="interface-icon" src="" alt="" />
+              <img class="interface-icon" src="./images/icon/interface.png" />
               <div class="color-picker-interface">
                 <input type="color" class="color-picker-bottom" />
                 <div class="color-picker-top"></div>
