--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/CustomEase.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script>
+      $(document).on("contextmenu", function (e) {
+        e.preventDefault();
+      });
+      gsap.registerPlugin(ScrollTrigger);
+      gsap.registerPlugin(CustomEase);
+    </script>
     <script src="./renderer.js"></script>
   </head>
   <body>
