導入中文與日文字體，降低字體粗細

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Noto+Sans+JP:wght@300&family=Noto+Sans+TC:wght@300&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="./style_global.css" />
@@ -111,8 +111,8 @@
           </div>
           <div class="options-language">
             <div class="english">English</div>
-            <div class="japanese">日本語</div>
-            <div class="chinese">繁體中文</div>
+            <div class="japanese" lang="ja">日本語</div>
+            <div class="chinese" lang="zh-Hant">繁體中文</div>
           </div>
           <div class="options-color">
             <div class="option">
