色彩選項給定預設值

--- a/index.html
+++ b/index.html
@@ -118,14 +118,22 @@
             <div class="option">
               <img class="background-icon" src="./images/icon/background.png" />
               <div class="color-picker-background">
-                <input type="color" class="color-picker-bottom" />
+                <input
+                  type="color"
+                  class="color-picker-bottom"
+                  value="#101316"
+                />
                 <div class="color-picker-top"></div>
               </div>
             </div>
             <div class="option">
               <img class="interface-icon" src="./images/icon/interface.png" />
               <div class="color-picker-interface">
-                <input type="color" class="color-picker-bottom" />
+                <input
+                  type="color"
+                  class="color-picker-bottom"
+                  value="#1A1A1A"
+                />
                 <div class="color-picker-top"></div>
               </div>
             </div>
