--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
           </div>
           <div class="options-language">
-            <div class="english">English</div>
+            <div class="english" lang="en">English</div>
             <div class="japanese" lang="ja">日本語</div>
             <div class="chinese" lang="zh-Hant">繁體中文</div>
           </div>
