--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Noto+Sans+JP:wght@300&family=Noto+Sans+TC:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="./style_global.css" />
-    <link rel="stylesheet" type="text/css" href="./style_background.css" />
-    <link rel="stylesheet" type="text/css" href="./style_index.css" />
-    <link rel="stylesheet" type="text/css" href="./style_gallery.css" />
-    <link rel="stylesheet" type="text/css" href="./style_fullscreen.css" />
+    <link rel="stylesheet" type="text/css" href="css/style_global.css" />
+    <link rel="stylesheet" type="text/css" href="css/style_background.css" />
+    <link rel="stylesheet" type="text/css" href="css/style_index.css" />
+    <link rel="stylesheet" type="text/css" href="css/style_gallery.css" />
+    <link rel="stylesheet" type="text/css" href="css/style_fullscreen.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/CustomEase.min.js"></script>
@@ -25,7 +25,7 @@
       gsap.registerPlugin(ScrollTrigger);
       gsap.registerPlugin(CustomEase);
     </script>
-    <script src="./renderer.js"></script>
+    <script src="js/renderer.js"></script>
   </head>
   <body>
     <div class="loading-container">
