改變成網頁版本url，新增本地測試程式碼

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <div class="loading-container">
-      <img class="loading" src="./images/icon/loading.gif" />
+      <img class="loading" src="images/icon/loading.gif" />
     </div>
     <div class="moving-images-container">
       <div class="moving-images a">
@@ -48,7 +48,7 @@
     <!-- 主頁內容 -->
     <div class="content">
       <div class="title">
-        <img class="ico" src="./images/icon/computer_folder.png" />
+        <img class="ico" src="images/icon/computer_folder.png" />
         <h1>1ureka's CG</h1>
       </div>
       <div class="page-btn-container">
@@ -67,12 +67,12 @@
       </div>
       <div class="tool-bar-container">
         <div class="setting-bar">
-          <img class="setting-btn" src="./images/icon/setting.gif" />
+          <img class="setting-btn" src="images/icon/setting.gif" />
           <div class="options-icon">
-            <img class="animation-btn" src="./images/icon/film.png" />
-            <img class="language-btn" src="./images/icon/language.png" />
-            <img class="color-btn" src="./images/icon/palette.png" />
-            <img class="bottom-btn" src="./images/icon/top (red).png" />
+            <img class="animation-btn" src="images/icon/film.png" />
+            <img class="language-btn" src="images/icon/language.png" />
+            <img class="color-btn" src="images/icon/palette.png" />
+            <img class="bottom-btn" src="images/icon/top (red).png" />
           </div>
           <div class="line"></div>
           <div class="options-lable">
@@ -99,14 +99,14 @@
                 <div class="pause-lable-red">pause</div>
                 <div class="pause-lable-white">pause</div>
               </div>
-              <img class="pause-btn" src="./images/icon/pause.png" />
+              <img class="pause-btn" src="images/icon/pause.png" />
             </div>
             <div class="option">
               <div class="reverse-lable-container">
                 <div class="reverse-lable-red">reverse</div>
                 <div class="reverse-lable-white">reverse</div>
               </div>
-              <img class="reverse-btn" src="./images/icon/reverse.png" />
+              <img class="reverse-btn" src="images/icon/reverse.png" />
             </div>
           </div>
           <div class="options-language">
@@ -116,7 +116,7 @@
           </div>
           <div class="options-color">
             <div class="option">
-              <img class="background-icon" src="./images/icon/background.png" />
+              <img class="background-icon" src="images/icon/background.png" />
               <div class="color-picker-background">
                 <input
                   type="color"
@@ -127,7 +127,7 @@
               </div>
             </div>
             <div class="option">
-              <img class="interface-icon" src="./images/icon/interface.png" />
+              <img class="interface-icon" src="images/icon/interface.png" />
               <div class="color-picker-interface">
                 <input
                   type="color"
@@ -140,12 +140,12 @@
           </div>
         </div>
         <div class="search-bar">
-          <img class="search-btn" src="./images/icon/search.png" />
+          <img class="search-btn" src="images/icon/search.png" />
           <input type="text" class="search-input" name="search-input" />
         </div>
         <div class="close-bar">
-          <img class="stop-btn" src="./images/icon/off.png" />
-          <img class="restart-btn" src="./images/icon/restart.png" />
+          <img class="stop-btn" src="images/icon/off.png" />
+          <img class="restart-btn" src="images/icon/restart.png" />
           <div class="stop-lable-container">
             <div class="stop-lable-red">close</div>
             <div class="stop-lable-white">close</div>
@@ -166,21 +166,21 @@
       <div class="bottom"></div>
     </div>
     <div class="back-to-home">
-      <img src="./images/icon/home (blue).png" />
+      <img src="images/icon/home (blue).png" />
     </div>
     <div class="top-btn">
-      <img src="./images/icon/top (blue).png" />
+      <img src="images/icon/top (blue).png" />
     </div>
     <!-- 預覽與全螢幕 -->
     <div class="fullscreen-overlay">
       <div class="close-btn">
-        <img src="./images/icon/close.png" />
+        <img src="images/icon/close.png" />
       </div>
       <div class="prevImage-btn">
-        <img src="./images/icon/top (blue).png" />
+        <img src="images/icon/top (blue).png" />
       </div>
       <div class="nextImage-btn">
-        <img src="./images/icon/top (blue).png" />
+        <img src="images/icon/top (blue).png" />
       </div>
       <div class="fullscreen-image-container">
         <img src="" />
