完成folder box類 - 移出html

--- a/index.html
+++ b/index.html
@@ -33,296 +33,9 @@
     </div>
     <div id="sidebar"></div>
     <div id="version-display"><p>版本： @0.0.1</p></div>
-    <div id="content">
-      <style>
-        /* createBulb */
-        .bulb-container,
-        .bulb {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-        }
-        .bulb {
-          background-color: #00000000;
-          box-shadow: 0px 0px 20px #00000000;
-          border-radius: 50%;
-        }
-        .bulb-filter {
-          background: radial-gradient(
-            circle at 5px 5px,
-            hsla(240, 0%, 0%, 0),
-            hsla(240, 0%, 0%, 0.35),
-            hsla(240, 0%, 0%, 0.9)
-          );
-          filter: blur(0.5px);
-          border-radius: 50%;
-        }
-
-        /* createFolderbox */
-        .folder-box {
-          box-sizing: border-box;
-          width: 100%;
-          height: 50px;
-          padding: 10px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          border-radius: 10px;
-          box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
-          z-index: 1;
-          cursor: pointer;
-        }
-        .folder-box-label {
-          width: calc(100% - 100px);
-          height: auto;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          font-size: 24px;
-          color: white;
-          pointer-events: none;
-        }
-
-        /* createFolderBoxContainer */
-        .folder-box-container {
-          position: relative;
-          width: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          user-select: none;
-        }
-        .folder-box-img {
-          position: absolute;
-          height: 100%;
-          border-radius: 10px;
-          box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
-          object-fit: cover;
-          background-color: darkolivegreen;
-        }
-      </style>
-      <!-- 項目將在這裡動態顯示 -->
-    </div>
+    <div id="content"><!-- 項目將在這裡動態顯示 --></div>
     <div id="scroll-buttons-container"></div>
     <div id="particle-container"></div>
-
-    <script>
-      function createBulb(config) {
-        // 預設配置
-        const defaultConfig = {
-          width: 40,
-          height: 40,
-        };
-
-        // 合併預設配置和用戶提供的配置
-        config = { ...defaultConfig, ...config };
-
-        const container = $("<div>")
-          .addClass("bulb-container")
-          .css({
-            width: `${config.width + 20}px`,
-            height: `${config.height + 20}px`,
-          });
-
-        const bulb = $("<div>")
-          .addClass("bulb")
-          .css({ width: `${config.width}px`, height: `${config.height}px` });
-        const bulbFilter = $("<div>")
-          .addClass("bulb-filter")
-          .css({ width: `${config.width}px`, height: `${config.height}px` })
-          .appendTo(bulb);
-
-        container.append(bulb);
-
-        return container;
-      }
-
-      class FolderBox {
-        constructor(config) {
-          // 預設配置
-          const defaultConfig = {
-            bulbColor: "#8ce197",
-            bulbIntensity: 1,
-            label: "自然",
-          };
-
-          // 合併預設配置和用戶提供的配置
-          config = { ...defaultConfig, ...config };
-
-          this.bulbColor = config.bulbColor;
-          this.bulbIntensity = config.bulbIntensity;
-          this.label = config.label;
-          this._isAppendTo = false;
-
-          this.element = this._createFolderBoxContainer();
-          return this.bindTimeline();
-        }
-
-        _createFolderBox() {
-          const box = $("<div>").addClass("folder-box");
-          const boxColor = "hsl(225, 10%, 23%)";
-
-          const folderIcon = createFolderIcon({ borderColor: boxColor });
-          const separator = createVerticalSeparator();
-          const bulb = createBulb({ width: 20, height: 20 });
-          const label = $("<label>")
-            .addClass("folder-box-label")
-            .text(this.label);
-
-          box.append(folderIcon, separator, label, bulb);
-
-          return box;
-        }
-
-        _createFolderBoxContainer() {
-          const container = $("<div>").addClass("folder-box-container");
-
-          const box = this._createFolderBox();
-          const img1 = $("<img>")
-            .addClass("folder-box-img")
-            .css("width", "97.5%");
-          gsap.set(img1, { y: 25 });
-          const elements = [box, img1];
-
-          for (let index = 1; index < 3; index++) {
-            const img = $("<img>")
-              .addClass("folder-box-img")
-              .css("width", `${97.5 - index * 2}%`);
-            gsap.set(img, {
-              y: 25 + index * 5,
-              autoAlpha: 1 - 0.25 * index,
-              filter: `blur(${index}px)`,
-            });
-            elements.push(img);
-          }
-
-          elements.reverse();
-          container.append(elements);
-
-          return container;
-        }
-
-        bindTimeline() {
-          const box = this.element.find(".folder-box");
-          const bulb = this.element.find(".bulb-container");
-          const folderIcon = this.element.find(".folder-icon-container");
-
-          const t1 = createBulbLightTl(bulb, {
-            color: this.bulbColor,
-            intensity: this.bulbIntensity,
-          });
-          const t2 = createBulbLightTl(bulb, {
-            color: this.bulbColor,
-            intensity: this.bulbIntensity * 1.5,
-            yoyo: true,
-          });
-          const t3 = createFolderIconHoverTl(folderIcon);
-          const t4 = createFolderBoxClickTl(box);
-          const t5 = createFolderBoxHoverTl(box);
-          const t6 = createFolderBoxContainerHoverTl(this.element);
-
-          this.element.on("mouseover", ".folder-box", () => {
-            t1.play();
-            t3.play();
-            t5.play();
-            t6.play();
-          });
-          this.element.on("mouseleave", ".folder-box", () => {
-            t1.reverse();
-            t3.reverse();
-            t5.reverse();
-            t6.reverse();
-          });
-          this.element.on("click", ".folder-box", () => {
-            t2.restart();
-            t4.restart();
-            t6.reverse();
-          });
-
-          return this;
-        }
-
-        unbindTimeline() {
-          this.element = this.element.off("mouseover mouseleave click");
-          return this;
-        }
-
-        appendTo(selector) {
-          if (this._isAppendTo) return;
-          this._isAppendTo = true;
-          this.element = this.element.appendTo(selector);
-          return this;
-        }
-      }
-    </script>
-
-    <script>
-      function createBulbLightTl(bulbContainer, config) {
-        // 預設配置
-        const defaultConfig = {
-          color: "#8ce197",
-          intensity: 1,
-          yoyo: false,
-        };
-
-        // 合併預設配置和用戶提供的配置
-        config = { ...defaultConfig, ...config };
-
-        const tl = gsap
-          .timeline({
-            defaults: { duration: config.yoyo ? 0.1 : 0.2, ease: "set1" },
-            paused: true,
-          })
-          .to(bulbContainer.find(".bulb"), {
-            backgroundColor: config.color,
-            boxShadow: `0 0 20px ${(config.intensity - 1) * 10}px ${
-              config.color
-            }`,
-            yoyo: config.yoyo,
-            repeat: config.yoyo ? 1 : 0,
-          })
-          .to(bulbContainer.find(".bulb-filter"), { filter: "blur(3px)" }, "<");
-
-        return tl;
-      }
-
-      function createFolderBoxHoverTl(box) {
-        const tl = gsap
-          .timeline({
-            defaults: { duration: 0.2, ease: "set1" },
-            paused: true,
-          })
-          .to(box, { width: "+=20" });
-
-        return tl;
-      }
-
-      function createFolderBoxClickTl(box) {
-        const tl = gsap
-          .timeline({
-            defaults: { duration: 0.1, ease: "set1" },
-            paused: true,
-          })
-          .to(box, { scale: 0.9, repeat: 1, yoyo: true });
-
-        return tl;
-      }
-
-      function createFolderBoxContainerHoverTl(container) {
-        const tl = gsap
-          .timeline({
-            defaults: { duration: 0.2, ease: "set1" },
-            paused: true,
-          })
-          .from(container.find(".folder-box-img"), {
-            y: 0,
-            autoAlpha: 0,
-            stagger: 0.1,
-          });
-
-        return tl;
-      }
-    </script>
 
     <!-- 組件、時間軸、全局函數... -->
     <script src="js/timeline.js"></script>
