移動載入圖示位置、新增preload依賴庫

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/CustomEase.min.js"></script>
+    <script src="https://code.createjs.com/1.0.0/preloadjs.min.js"></script>
     <!-- 樣式表 -->
     <link rel="stylesheet" href="style.css" />
     <!-- 點擊效果 -->
@@ -37,6 +38,7 @@
     <div id="particle-container"></div>
 
     <!-- 組件、時間軸、全局函數... -->
+    <script src="js/utils.js"></script>
     <script src="js/timeline.js"></script>
     <script src="js/component.js"></script>
 
