--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
     <div id="sidebar"></div>
     <div id="version-display"><p>版本： @0.0.1</p></div>
     <div id="content"><!-- 項目將在這裡動態顯示 --></div>
+    <div id="loading-container">
+      <img src="icons/loading.gif" />
+      <p id="loading-message">準備開始載入 . . .</p>
+    </div>
+    <progress id="loading-progress" value="50" max="100"></progress>
     <div id="particle-container"></div>
 
     <!-- 組件、時間軸、全局函數... -->
