完成載入動畫與背後邏輯

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <img src="icons/loading.gif" />
       <p id="loading-message">準備開始載入 . . .</p>
     </div>
-    <progress id="loading-progress" value="50" max="100"></progress>
+    <div id="progress-bar"></div>
     <div id="particle-container"></div>
 
     <!-- 組件、時間軸、全局函數... -->
