初步嘗試新增element layer

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <!-- 組件、時間軸、全局函數... -->
     <script src="js/utils.js"></script>
     <script src="js/timeline.js"></script>
+    <script src="js/element.js"></script>
     <script src="js/component.js"></script>
 
     <!-- main記得放在最後 -->
