修復測試部屬遇到的問題

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap"
       rel="stylesheet"
     />
+    <!-- 載入動畫 -->
+    <link rel="preload" href="images/icons/loading.gif" as="image" />
     <!-- CDN -->
     <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
     <script
@@ -34,7 +36,7 @@
       <h1>1ureka's CG</h1>
     </div>
     <div id="sidebar"></div>
-    <div id="version-display"><p>版本： @0.0.1</p></div>
+    <div id="version-display"><p>版本： @0.1.1</p></div>
     <div id="content"><!-- 項目將在這裡動態顯示 --></div>
     <div id="loading-container">
       <img src="images/icons/loading.gif" />
