--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="images/profile image/profile (circle).png"
+      href="images/icons/favicon (circle).png"
     />
     <title>1ureka's CG</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -47,7 +47,7 @@
 
     <div id="sidebar">
       <div id="title">
-        <img id="favicon" src="images/profile image/profile.png" />
+        <img id="favicon" src="images/icons/favicon.png" />
         <h1 lang="en">1ureka's CG</h1>
       </div>
     </div>
