--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
 
     <!-- CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/compressorjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
@@ -41,8 +42,51 @@
     <script src="lib/clickParticle.js"></script>
     <script src="lib/loadingIcon.js"></script>
     <script src="lib/waveBG.js"></script>
+    <script type="module" src="lib/repo.mjs"></script>
   </head>
   <body>
+    <div id="login-container">
+      <form id="login-form">
+        <img src="images/icons/user.png" />
+        <div
+          style="
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 25px;
+          "
+        >
+          <div class="wave-group">
+            <input
+              required="true"
+              type="text"
+              class="input"
+              autocomplete="off"
+            />
+            <span class="bar"></span>
+            <label class="label">
+              <span class="label-char" style="--index: 0">名</span>
+              <span class="label-char" style="--index: 1">稱</span>
+            </label>
+          </div>
+          <div class="wave-group">
+            <input
+              required="true"
+              type="password"
+              class="input"
+              autocomplete="off"
+            />
+            <span class="bar"></span>
+            <label class="label">
+              <span class="label-char" style="--index: 0">密</span>
+              <span class="label-char" style="--index: 1">碼</span>
+            </label>
+          </div>
+        </div>
+        <button type="submit" id="login-submit">登入</button>
+      </form>
+    </div>
+
     <div id="header"></div>
 
     <div id="sidebar">
@@ -56,12 +100,7 @@
 
     <div id="content"><!-- 項目將在這裡動態顯示 --></div>
 
-    <div id="loading-container">
-      <div></div>
-      <p id="loading-message">準備開始載入 . . .</p>
-    </div>
-
-    <div id="progress-bar"></div>
+    <div id="loading-container"></div>
 
     <!-- 組件、時間軸、全局函數... -->
     <script src="js/utils.js"></script>
