--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <div id="content"><!-- 項目將在這裡動態顯示 --></div>
 
-    <div id="loading-container"></div>
+    <div id="mask-background"></div>
 
     <!-- 組件、時間軸、全局函數... -->
     <script src="js/utils.js"></script>
