--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&family=Noto+Sans+TC:wght@300&display=swap"
       rel="stylesheet"
     />
 
