--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 
     <div id="mask-background"></div>
 
+    <span id="loading-info"></span>
+
     <!-- 組件、時間軸、全局函數... -->
     <script src="js/utils.js"></script>
     <script src="js/timeline.js"></script>
