--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 
     <!-- lib -->
     <script src="lib/clickParticle.js"></script>
-    <script src="lib/loadingIcon.js"></script>
     <script src="lib/waveBG.js"></script>
     <script type="module" src="lib/repo.mjs"></script>
   </head>
@@ -85,20 +84,20 @@
       </form>
     </div>
 
-    <div id="header"></div>
+    <header id="header"></header>
 
-    <div id="sidebar">
+    <aside id="sidebar">
       <div id="title">
         <img id="favicon" src="images/icons/favicon.png" />
         <h1 lang="en">1ureka's CG</h1>
       </div>
-    </div>
+    </aside>
+
+    <div id="popup-container"></div>
 
     <div id="version-display"><p>版本： @1.1.0</p></div>
 
     <div id="content"><!-- 項目將在這裡動態顯示 --></div>
-
-    <div id="mask-background"></div>
 
     <span id="loading-info"></span>
 
