--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- CDN -->
     <script src="https://cdn.jsdelivr.net/npm/compressorjs"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/4.5.0/fabric.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
